Logic complete + UI improvements.
Missing:
	Test
	Code refactoring
	Handle error on first access without net

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="currency_SEK_description">Swedish Krona</string>
     <string name="currency_CAN_description">Canadian Dollar</string>
     <string name="currency_OTHER_description">Other</string>
+    <string name="rates_label">Rates</string>
 
 
     <string-array name="currencies">
